// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block generator test 1`] = `
Array [
  Object {
    "i": 0,
    "y": 4,
  },
  Object {
    "i": -1,
    "y": 4,
  },
  Object {
    "i": 0,
    "y": 5,
  },
  Object {
    "i": -1,
    "y": 5,
  },
]
`;

exports[`block generator test 2`] = `
Array [
  Object {
    "i": -2,
    "y": 4,
  },
  Object {
    "i": -1,
    "y": 4,
  },
  Object {
    "i": 0,
    "y": 4,
  },
  Object {
    "i": 0,
    "y": 5,
  },
]
`;

exports[`block generator test 3`] = `
Array [
  Object {
    "i": -2,
    "y": 5,
  },
  Object {
    "i": -1,
    "y": 5,
  },
  Object {
    "i": 0,
    "y": 4,
  },
  Object {
    "i": 0,
    "y": 5,
  },
]
`;

exports[`block generator test 4`] = `
Array [
  Object {
    "i": -1,
    "y": 4,
  },
  Object {
    "i": -1,
    "y": 5,
  },
  Object {
    "i": 0,
    "y": 5,
  },
  Object {
    "i": 0,
    "y": 6,
  },
]
`;

exports[`block generator test 5`] = `
Array [
  Object {
    "i": -1,
    "y": 5,
  },
  Object {
    "i": -1,
    "y": 6,
  },
  Object {
    "i": 0,
    "y": 4,
  },
  Object {
    "i": 0,
    "y": 5,
  },
]
`;

exports[`block generator test 6`] = `
Array [
  Object {
    "i": -3,
    "y": 4,
  },
  Object {
    "i": -2,
    "y": 4,
  },
  Object {
    "i": -1,
    "y": 4,
  },
  Object {
    "i": 0,
    "y": 4,
  },
]
`;

exports[`block generator test 7`] = `
Array [
  Object {
    "i": -2,
    "y": 4,
  },
  Object {
    "i": -1,
    "y": 4,
  },
  Object {
    "i": -1,
    "y": 5,
  },
  Object {
    "i": 0,
    "y": 4,
  },
]
`;

exports[`block generator test 8`] = `
Array [
  Object {
    "i": 0,
    "y": 4,
  },
  Object {
    "i": -1,
    "y": 4,
  },
  Object {
    "i": 0,
    "y": 5,
  },
  Object {
    "i": -1,
    "y": 5,
  },
]
`;

exports[`test drop lines function 1`] = `
Array [
  Array [
    0,
    0,
    0,
    2,
  ],
  Array [
    0,
    0,
    2,
    2,
  ],
  Array [
    0,
    2,
    2,
    2,
  ],
]
`;

exports[`test of checklines function 1`] = `
Array [
  Array [
    0,
    2,
    2,
    0,
  ],
  Array [
    0,
    0,
    2,
    0,
  ],
  Array [
    0,
    0,
    0,
    0,
  ],
]
`;

exports[`testing clear line function 1`] = `
Array [
  Array [
    0,
    0,
    0,
    0,
  ],
  Array [
    0,
    0,
    5,
    0,
  ],
  Array [
    0,
    0,
    0,
    0,
  ],
]
`;
